--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -246,7 +246,7 @@ body {
 .wrap {
  width: 90%;
  left: calc((10%-43px) / 2);
- margin-top: 130px;
+ margin-top: 110px;
 }
 
 .goods-container {
@@ -268,6 +268,7 @@ body {
  display: flex;
  flex-wrap: wrap;
  margin-top: 10px;
+ margin-left: 10px;
 }
 
 .good {
@@ -807,4 +808,122 @@ textarea {
 .letter > button:hover {
  background-color: rgb(248 250 252);
  color: rgb(99 102 241);
+}
+
+.black-friday {
+ display: flex;
+ margin-top: 30px;
+ width: 93%;
+ height: 500px;
+ background-color: rgb(248 250 252);
+ border: 3px solid rgb(248 250 252);
+ border-radius: 50px;
+ font-style: italic;
+ justify-content: space-between;
+ transition: 0.4s;
+}
+
+.black-friday:hover {
+ background-color: rgb(99 102 241);
+}
+
+.black-friday > img {
+ height: 300px;
+ margin-top: 100px;
+ margin-bottom: 100px;
+ margin-right: 20px;
+ transition: 0.8s;
+ filter: drop-shadow(10px 10px 20px rgb(0, 0, 0));
+}
+
+.black-friday:hover > img {
+ height: 400px;
+ margin-top: 50px;
+ margin-bottom: 50px;
+ filter: drop-shadow(10px 10px 25px rgb(0, 0, 0));
+}
+
+.black-friday-text-container {
+ align-self: center;
+ margin-left: 160px;
+ display: flex;
+ flex-direction: column;
+}
+
+.bf1 {
+ align-self: flex-start;
+ font-size: 40px;
+ font-weight: 900;
+ color: transparent;
+ -webkit-text-stroke: 2px rgb(99 102 241);
+ text-stroke: 2px rgb(99 102 241);
+ text-shadow: none;
+ transition: 0.4s;
+}
+
+.black-friday:hover .bf1 {
+ color: transparent;
+ -webkit-text-stroke: 2px rgb(0, 0, 0);
+ text-stroke: 2px rgb(0, 0, 0);
+ text-shadow: none;
+}
+
+.bf2 {
+ align-self: flex-start;
+ font-size: 100px;
+ font-weight: 900;
+ transition: 0.4s;
+}
+
+.black-friday:hover .bf2 {
+ color: rgb(248 250 252);
+}
+
+.bf3 {
+ align-self: flex-end;
+ font-size: 40px;
+ font-weight: 900;
+ color: transparent;
+ -webkit-text-stroke: 2px rgb(0, 0, 0);
+ text-stroke: 2px rgb(0, 0, 0);
+ text-shadow: none;
+ transition: 0.4s;
+}
+
+.black-friday:hover .bf3 {
+ -webkit-text-stroke: 2px rgb(248 250 252);
+ text-stroke: 2px rgb(248 250 252);
+}
+
+.bf4 {
+ align-self: flex-start;
+ margin-top: 50px;
+ font-size: 40px;
+ font-weight: 900;
+ color: rgb(99 102 241);
+ transition: 0.4s;
+}
+
+.black-friday:hover .bf4 {
+ color: rgb(0, 0, 0);
+}
+
+.bf5 {
+ align-self: flex-end;
+ font-size: 60px;
+ font-weight: 900;
+ color: transparent;
+ -webkit-text-stroke: 2px rgb(0, 0, 0);
+ text-stroke: 2px rgb(0, 0, 0);
+ text-shadow: none;
+ transition: 0.4s;
+}
+
+.black-friday:hover .bf5 {
+ -webkit-text-stroke: 2px rgb(248 250 252);
+ text-stroke: 2px rgb(248 250 252);
+}
+
+.decoration {
+ display: absolute;
 }
