--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -101,6 +101,27 @@ body {
  align-items: center;
 }
 
+.nav-container-2 {
+ z-index: 10;
+ display: flex;
+ position: absolute;
+ left: 0;
+ flex-direction: column;
+ background-color: rgb(15 23 42);
+ margin-top: 80px;
+ width: 100%;
+ align-items: center;
+ transition: 0.5s;
+}
+.nav-container-2 a {
+ width: 100%;
+}
+.nav-container-2 a button {
+ width: 100%;
+ padding-top: 10px;
+ padding-bottom: 10px;
+}
+
 .navbar {
  position: fixed;
  flex-shrink: 0;
@@ -114,15 +135,20 @@ body {
  z-index: 9999;
 }
 
-.menuicon {
- width: 1.5rem;
- height: 1.5rem;
+.fa-bars,
+.fa-xmark {
  color: rgb(248 250 252);
  margin-right: 1rem;
 }
 
 @media (min-width: 768px) {
- .menuicon {
+ .Icons {
+  display: none;
+ }
+}
+
+@media (min-width: 768px) {
+ .nav-container-2 {
   display: none;
  }
 }
@@ -179,6 +205,21 @@ body {
  color: rgb(79 70 229);
 }
 
+.menu-button {
+ font-size: 1.5rem;
+ line-height: 2rem;
+ color: rgb(248 250 252);
+ padding-left: 2.5rem;
+ padding-right: 2.5rem;
+ height: 100%;
+ font-weight: 700;
+ background-color: rgb(15 23 42);
+ transition: 0.4s ease-out;
+}
+.menu-button:hover {
+ background-color: rgb(79 70 229);
+}
+
 @media (min-width: 768px) {
  .logo {
   font-size: 2.5rem;
@@ -188,20 +229,6 @@ body {
  .nav-container {
   display: flex;
   height: 100%;
- }
- .menu-button {
-  font-size: 1.5rem;
-  line-height: 2rem;
-  color: rgb(248 250 252);
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-  height: 100%;
-  font-weight: 700;
-  background-color: rgb(15 23 42);
-  transition: 0.4s ease-out;
- }
- .menu-button:hover {
-  background-color: rgb(79 70 229);
  }
 
  .sign-container {
@@ -809,56 +836,162 @@ textarea {
  background-color: rgb(248 250 252);
  color: rgb(99 102 241);
 }
-
 .black-friday {
  display: flex;
  margin-top: 30px;
  width: 93%;
- height: 500px;
  background-color: rgb(248 250 252);
  border: 3px solid rgb(248 250 252);
  border-radius: 50px;
  font-style: italic;
  justify-content: space-between;
  transition: 0.4s;
+ flex-direction: column;
 }
 
+@media (min-width: 768px) {
+ .black-friday {
+  display: flex;
+  flex-direction: row;
+  height: 500px;
+ }
+}
 .black-friday:hover {
  background-color: rgb(99 102 241);
 }
 
 .black-friday > img {
- height: 300px;
- margin-top: 100px;
- margin-bottom: 100px;
- margin-right: 20px;
- transition: 0.8s;
- filter: drop-shadow(10px 10px 20px rgb(0, 0, 0));
+ display: none;
 }
-
-.black-friday:hover > img {
- height: 400px;
- margin-top: 50px;
- margin-bottom: 50px;
- filter: drop-shadow(10px 10px 25px rgb(0, 0, 0));
+@media (min-width: 768px) {
+ .black-friday > img {
+  display: block;
+  height: 300px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-right: 20px;
+  transition: 0.8s;
+  filter: drop-shadow(10px 10px 20px rgb(0, 0, 0));
+ }
+ .black-friday:hover > img {
+  height: 400px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  filter: drop-shadow(10px 10px 25px rgb(0, 0, 0));
+ }
 }
-
 .black-friday-text-container {
  align-self: center;
- margin-left: 160px;
  display: flex;
  flex-direction: column;
+ margin-top: 20px;
+ margin-bottom: 20px;
 }
 
 .bf1 {
  align-self: flex-start;
- font-size: 40px;
+ font-size: 30px;
  font-weight: 900;
  color: transparent;
  -webkit-text-stroke: 2px rgb(99 102 241);
  text-stroke: 2px rgb(99 102 241);
  text-shadow: none;
  transition: 0.4s;
+}
+
+.bf2 {
+ align-self: flex-start;
+ font-size: 50px;
+ font-weight: 900;
+ transition: 0.4s;
+}
+
+.bf3 {
+ align-self: flex-end;
+ font-size: 30px;
+ font-weight: 900;
+ color: transparent;
+ -webkit-text-stroke: 2px rgb(0, 0, 0);
+ text-stroke: 2px rgb(0, 0, 0);
+ text-shadow: none;
+ transition: 0.4s;
+}
+
+.bf4 {
+ align-self: flex-start;
+ margin-top: 40px;
+ font-size: 40px;
+ font-weight: 900;
+ color: rgb(99 102 241);
+ transition: 0.4s;
+}
+
+.bf5 {
+ align-self: flex-end;
+ font-size: 50px;
+ font-weight: 900;
+ color: transparent;
+ -webkit-text-stroke: 2px rgb(0, 0, 0);
+ text-stroke: 2px rgb(0, 0, 0);
+ text-shadow: none;
+ transition: 0.4s;
+}
+
+@media (min-width: 768px) {
+ .black-friday-text-container {
+  align-self: center;
+  margin-left: 160px;
+  display: flex;
+  flex-direction: column;
+ }
+ .bf1 {
+  align-self: flex-start;
+  font-size: 40px;
+  font-weight: 900;
+  color: transparent;
+  -webkit-text-stroke: 2px rgb(99 102 241);
+  text-stroke: 2px rgb(99 102 241);
+  text-shadow: none;
+  transition: 0.4s;
+ }
+
+ .bf2 {
+  align-self: flex-start;
+  font-size: 100px;
+  font-weight: 900;
+  transition: 0.4s;
+ }
+
+ .bf3 {
+  align-self: flex-end;
+  font-size: 40px;
+  font-weight: 900;
+  color: transparent;
+  -webkit-text-stroke: 2px rgb(0, 0, 0);
+  text-stroke: 2px rgb(0, 0, 0);
+  text-shadow: none;
+  transition: 0.4s;
+ }
+
+ .bf4 {
+  align-self: flex-start;
+  margin-top: 50px;
+  font-size: 40px;
+  font-weight: 900;
+  color: rgb(99 102 241);
+  transition: 0.4s;
+ }
+
+ .bf5 {
+  align-self: flex-end;
+  font-size: 60px;
+  font-weight: 900;
+  color: transparent;
+  -webkit-text-stroke: 2px rgb(0, 0, 0);
+  text-stroke: 2px rgb(0, 0, 0);
+  text-shadow: none;
+  transition: 0.4s;
+ }
 }
 
 .black-friday:hover .bf1 {
@@ -868,26 +1001,8 @@ textarea {
  text-shadow: none;
 }
 
-.bf2 {
- align-self: flex-start;
- font-size: 100px;
- font-weight: 900;
- transition: 0.4s;
-}
-
 .black-friday:hover .bf2 {
  color: rgb(248 250 252);
-}
-
-.bf3 {
- align-self: flex-end;
- font-size: 40px;
- font-weight: 900;
- color: transparent;
- -webkit-text-stroke: 2px rgb(0, 0, 0);
- text-stroke: 2px rgb(0, 0, 0);
- text-shadow: none;
- transition: 0.4s;
 }
 
 .black-friday:hover .bf3 {
@@ -895,28 +1010,8 @@ textarea {
  text-stroke: 2px rgb(248 250 252);
 }
 
-.bf4 {
- align-self: flex-start;
- margin-top: 50px;
- font-size: 40px;
- font-weight: 900;
- color: rgb(99 102 241);
- transition: 0.4s;
-}
-
 .black-friday:hover .bf4 {
  color: rgb(0, 0, 0);
-}
-
-.bf5 {
- align-self: flex-end;
- font-size: 60px;
- font-weight: 900;
- color: transparent;
- -webkit-text-stroke: 2px rgb(0, 0, 0);
- text-stroke: 2px rgb(0, 0, 0);
- text-shadow: none;
- transition: 0.4s;
 }
 
 .black-friday:hover .bf5 {
