--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -840,7 +840,7 @@ textarea {
  display: flex;
  margin-top: 30px;
  width: 93%;
- background-color: rgb(248 250 252);
+ background: url(../img/IMG_20221011_170433.jpg) center/cover fixed no-repeat;
  border: 3px solid rgb(248 250 252);
  border-radius: 50px;
  font-style: italic;
@@ -857,7 +857,7 @@ textarea {
  }
 }
 .black-friday:hover {
- background-color: rgb(99 102 241);
+ background: rgb(99 102 241);
 }
 
 .black-friday > img {
@@ -886,6 +886,12 @@ textarea {
  flex-direction: column;
  margin-top: 20px;
  margin-bottom: 20px;
+ background-color: white;
+ border-radius: 50px;
+}
+
+.black-friday:hover .black-friday-text-container {
+ background-color: transparent;
 }
 
 .bf1 {
