--- a/Homework 19/hv19/src/index.css
+++ b/Homework 19/hv19/src/index.css
@@ -14,20 +14,42 @@ code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-.alert-enter {
+.left-enter {
+ position: absolute;
+ transform: translateX(100%);
+}
+.left-enter-active {
+ position: absolute;
+ transform: translateX(-50%);
+ transition: transform 300ms ease-in-out;
+}
+.left-exit {
+ position: absolute;
+ transform: translateX(0%);
+}
+.left-exit-active {
+ position: absolute;
  opacity: 0;
- transform: scale(0.9);
+ transform: translateX(-150%);
+ transition: transform 300ms ease-in-out;
 }
-.alert-enter-active {
- opacity: 1;
- transform: translateX(0);
- transition: opacity 300ms, transform 300ms;
+
+.right-enter {
+ position: absolute;
+ transform: translateX(-150%);
 }
-.alert-exit {
- opacity: 1;
+.right-enter-active {
+ position: absolute;
+ transform: translateX(-50%);
+ transition: transform 300ms ease-in-out;
 }
-.alert-exit-active {
+.right-exit {
+ position: absolute;
+ transform: translateX(0%);
+}
+.right-exit-active {
+ position: absolute;
  opacity: 0;
- transform: scale(0.9);
- transition: opacity 300ms, transform 300ms;
+ transform: translateX(0%);
+ transition: transform 300ms ease-in-out;
 }
